@@ -305,6 +305,9 @@
 	 </tbody>
        </tgroup>
      </informaltable>
+
+	Need to add:  search
+
    </para>
  </sect1>
  
